_ltu-patterns/packages/form/src/scss/_form.scss
form {
    width: 100%;
    @extend .grid-12-col;
}

label {
    display: block;
    font-weight: 500;
}

label abbr[title] {
    border-bottom: 0;
}

input,
textarea {
    display: block;
    -webkit-appearance: none; // IOS remove default styling
}

input:focus,
input:focus + label::before,
select:focus,
textarea:focus {
    outline: none;
    border-color: #80bdff;
    box-shadow: 0 0 0 2px rgba(0,123,255,.25);
}

input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none; // IOS remove default styling
    margin: 0;
}

legend {
    display: block;
    padding: 0;
    border: none;
    font-weight: 500;
    margin-top: 0;
}

fieldset {
    border: 0;
    padding: 0;
    display: contents;
}



legend {
    margin-top: 1.5em;
    grid-column: 1/span 12;
    @extend h4;

    @media (min-width: 768px) {
        margin-top: 2em;
    }
}

.form-group {
    margin-top: 1.5em;
    grid-column: span 12;

    @media (min-width: 768px) {
        margin-top: 2em;
    }
}


//
// Control columns
//

.control-group {
    margin-top: 8px;

    &>:first-child {
        margin-top: 0;
    }
}

.control-group[data-cols="4"] {
    columns: 4;
    
    @media (max-width: 768px) {
        columns: 2;
    }
}

.control-input {
    margin-top: 8px;
    display: inline-block;

    &--block {
        display: block;
    }

    label {
        margin-top: 0;
    }
}


//
// Form validation
//

.req {
    color: $color-1;
    padding-left: 4px;
}

.text-input,
.select,
.sq-form-field {
    display: block;
    width: 100%;
    padding: 16px;
    background-color: lighten($color-3b, 20%);
    border: 2px solid $color-3b;
    resize: vertical;
    border-radius: 2px;
    margin-top: 4px;
}

.control-input,
.text-input,
.select,
.sq-form-field {    
    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;

    label::before {
        height: 24px;
        width: 24px;
        border: 2px solid $color-3b;
        border-radius: 2px;
        left: 0px;
        top: 3px;
    }

    &--invalid {
        border-color: $color-1;

        label::before {
            border-color: $color-1;
        }
    }

    &--valid {
        border-color: $green;

        
        label::before {
            border-color: $green;
        }
    }

    &:disabled {
        background: $color-3a;

        &::placeholder {
            color: $color-3b;
        }
    }
}

.invalid-text,
.valid-text {
    display: block;
    margin-top: 8px;
    font-weight: 500;
}

.invalid-text {
    color: $color-1;
}

.valid-text {
    color: $green;
}

